PortfolioReader/Writer done, equals() and hashCode() for interfaces